# cmake_maker

./: .gitignore  CMakeLists.txt  cmake_maker.cpp
